<resources>
    <string name="app_name">CaliTour</string>
    <string name="contact_us">Contáctanos</string>
    <string name="event">Evento</string>
    <string name="product_sale">Producto en venta</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="dont_have_account">No tengo cuenta</string>
    <string name="register_me">Registrarme</string>
    <string name="name">Nombre</string>
    <string name="email">E-mail</string>
    <string name="password">Contraseña</string>
    <string name="phone">Celular</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="select_image">Selecciona una imagen</string>
    <string name="event_header">¡Contanos ve!</string>
    <string name="name_of_your_event">Nombre del evento</string>
    <string name="description_of_your_event">Descripcion del evento… </string>
    <string name="date_hour_event">Selecciona fecha y hora</string>
    <string name="location_event">Añade la ubicacion</string>
    <string name="price_event_product">Indica el precio</string>
    <string name="dropdown_categories">dropDownMenuCategories</string>
    <string name="points_label">Mis Puntos</string>
    <string name="user_event_historial_title"> Tu historia</string>
    <string-array name="categories">
        <item>Categoría</item>
        <item>Música</item>
        <item>Baile</item>
        <item>Arte</item>
        <item>Literatura</item>
        <item>Teatro</item>
        <item>Cine</item>
        <item>Deporte</item>
        <item>Comida</item>
    </string-array>
    <string name="btn_create_event">Crear Evento</string>
    <string name="btn_edit_event">Editar Evento</string>
    <string name="name_of_your_product">Nombre del producto</string>
    <string name="description_of_your_product">Descripcion del producto… </string>
    <string name="btn_create_product">Crear producto</string>
    <string name="are_you">¿Sos…?</string>
    <string name="user">Usuario</string>
    <string name="entity">Entidad</string>
    <string name="welcome_message">Vení a la sucursal del cielo y date un borondo, ve!</string>
    <string name="start">Comenzar</string>
    <string name="description">Descripción</string>
    <string name="itineraryEmptyTV">Aún no tenés un plan pa hoy, parchate en uno de los eventos y mételo a tu itinerario</string>
    <string name="itineraryFullTitleTV">Yo te guio manit@</string>
    <string name="about_us">Sobre nosotros</string>
    <string name="save">Guardar</string>
    <string name="add">Añadir</string>
    <string name="notify">Notificar</string>
    <string name="interested">Me interesa</string>
    <string name="home_title">¿Qué te contás ve?</string>
    <string name="home_header">¿Qué hay pa hacer hoy?</string>
    <string name="free">Gratis</string>
    <string name="music">Música</string>
    <string name="dance">Baile</string>
    <string name="art">Arte</string>
    <string name="literature">Literatura</string>
    <string name="theater">Teatro</string>
    <string name="sport">Deporte</string>
    <string name="food">Comida</string>


    <string name="titleEventTriviasTV">Trivias</string>
    <string name="subtitleEventTriviasTV">Mis eventos activos</string>


    <string name="titleQuestionTV">Editando Tu Pregunta</string>
    <string name="AnswersTV">Opciones</string>
    <string name="saveBtn">Guardar</string>
    <string name="questionTV">Pregunta</string>
    <string name="warningTV">¡Ojo! Recuerda que la primera opción es la respuesta correcta.</string>
    <string name="option1ET">Opcion 1</string>
    <string name="option2ET">Opcion 2</string>
    <string name="option3ET">Opcion 3</string>
    <string name="option4ET">Opcion 4</string>

    <string name="titleTriviasTV">¿Que hay pa preguntar?</string>
    <string name="questionsTV">Preguntas</string>

    <string name="editBtn">Editar</string>
</resources>
