<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="376dp"
        android:layout_height="252dp"
        android:contentDescription="@string/event_header"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="471dp"
        android:background="#673AB7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editTextText"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="name"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/name_of_your_product"
            android:inputType="text"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/categories"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="30dp"
            android:background="#FFFFFF"
            android:dropDownWidth="match_parent"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView3"
            app:layout_constraintTop_toBottomOf="@+id/editTextText" />

        <EditText
            android:id="@+id/editTextTextMultiLine2"
            android:layout_width="356dp"
            android:layout_height="78dp"
            android:layout_marginTop="20dp"
            android:autofillHints="description"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description_of_your_product"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="70dp"
            app:layout_constraintEnd_toStartOf="@+id/editTextText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/name_of_your_event" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#FFC107"
            android:text="@string/btn_create_product"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="356dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:ems="10"
            android:hint="@string/price_event_product"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>